Cambiada la palabra 'proyecto' (#68)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{report}
+\documentclass[twoside,openright,11pt]{report}
 \usepackage{import}
 \usepackage{preamble}
 
@@ -19,13 +19,13 @@
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter*{Autoría}
+%\chapter*{Autoría}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % AUTORÍA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\import{tex/}{autoria.tex}
+%\import{tex/}{autoria.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
