--- a/memoria/tex/capitulos/analisis-diseno.tex
+++ b/memoria/tex/capitulos/analisis-diseno.tex
@@ -2,7 +2,7 @@ Una vez estimada la planificación temporal y el presupuesto del proyecto, es mo
 
 \section*{Análisis de requisitos}
 
-Tras un estudio profundo del problema y evaluando la viabilidad de los mismos, introducimos los requisitos, funcionales y no funcionales, de este proyecto:
+Tras un estudio profundo del problema y evaluando la viabilidad de los mismos, introducimos los requisitos, funcionales y no funcionales, de este producto:
 
 \subsection*{Requisitos funcionales}
 En caso de la visualización de fractales 2D:
