--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -70,7 +70,7 @@ Para el desarrollo de esta memoria las fuentes fundamentales consultadas han sid
 
 En temas relacionados con la visualización de fractales con ray-tracing se ha adaptado el código C++ de \textit{Ray Tracing in One Weekend}, de Peter Shirley \cite{Shirley} a código GLSL ejecutado en la GPU. Para graficar fractales se han consultado principalmente los artículos de Íñigo Quilez, disponibles en su web personal \url{https://iquilezles.org/articles/}, los artículos de John Hart de 1989 \cite{Hart-1989} y 1995 \cite{Hart-1995} y el artículo \cite{keenan-crane} de Keenan Crane. 
 
-Sin mucho más que añadir, el humilde autor de este proyecto desea una experiencia agradable durante su lectura y el disfrute de cada una de las secciones.
+Sin mucho más que añadir, el humilde autor de este trabajo desea una experiencia agradable durante su lectura y el disfrute de cada una de las secciones.
 
 
 
