--- a/memoria/tex/objetivos.tex
+++ b/memoria/tex/objetivos.tex
@@ -1,4 +1,4 @@
-Los objetivos iniciales de este proyecto son muy similares a los finalmente alcanzados. Muchos de ellos, fundamentalmente en la parte matemática, han sido alcanzados, mientras que en la parte informática se ha conseguido lo esencial mientras que hemos tenido que dejar algunos análisis de rendimiento. 
+Los objetivos iniciales de este trabajo son muy similares a los finalmente alcanzados. Muchos de ellos, fundamentalmente en la parte matemática, han sido alcanzados, mientras que en la parte informática se ha conseguido lo esencial mientras que hemos tenido que dejar algunos análisis de rendimiento. 
 
 En el ámbito de las matemáticas, el objetivo inicial consistía en realizar un estudio de los fundamentos básicos de la Geometría Fractal. Para ello, se realizaría una recopilación de algunos de los conceptos y resultados necesarios, insistiendo en la teoría de la medida y el teorema del punto fijo de Banach. Se desarrollarían los elementos esenciales de la Geometría Fractal, especialmente conceptos de dimensión, como la de Hausdorff, sistemas de funciones iteradas, autosimilitud o el teorema del collage. Finalmente, se presentarían diversas aplicaciones de la Geometría Fractal, especialmente vinculadas con la naturaleza.
 
@@ -6,7 +6,7 @@ En efecto, se han recopilado los resultados más importantes de la geometría fr
 
 Sobre teoría de la medida, en el capítulo \ref{chap:concepto} se comprueba la nulidad de la medida de Lebesgue de algunos objetos fractales como el conjunto de Cantor en la sección \ref{subsection:Cantor} o el triángulo de Sierpinski en la \ref{subsection:triangulo-Sierpinski}. Se presenta la medida de Hausdorff en la sección \ref{subsection:dim-Hausdorff}, la cual nos lleva directamente al concepto de dimensión de Hausdorff. Sobre dimensión, además de una introducción básica, se definen conceptos como la dimensión por cajas en el apartado \ref{subsection:dim-cajas}, la ya mencionada dimensión de Hausdorff en el \ref{subsection:dim-Hausdorff} y la dimensión topológica en el \ref{subsection:dim-topologica}, para finalmente relacionar entre sí todas las definiciones en la sección \ref{subsection:relacion-dimensiones}. 
 
-Por su parte, el teorema del punto fijo de Banach (teorema \ref{th:punto-fijo}) está enunciado y demostrado en la sección \ref{subsection:convergencia-punto-fijo} y desde ese momento se convierte en una herramienta fundamental en toda la materia y en especial en el capítulo \ref{chap:SFI}, el cual trata de Sistemas de Funciones Iteradas (SFI), concepto que también era objetivo inicial de este proyecto. Los SFI y su convergencia están muy basados en el teorema del punto fijo de Banach y el teorema del collage (teorema \ref{th:collage}) es de hecho una consecuencia del mismo.
+Por su parte, el teorema del punto fijo de Banach (teorema \ref{th:punto-fijo}) está enunciado y demostrado en la sección \ref{subsection:convergencia-punto-fijo} y desde ese momento se convierte en una herramienta fundamental en toda la materia y en especial en el capítulo \ref{chap:SFI}, el cual trata de Sistemas de Funciones Iteradas (SFI), concepto que también era objetivo inicial de este trabajo. Los SFI y su convergencia están muy basados en el teorema del punto fijo de Banach y el teorema del collage (teorema \ref{th:collage}) es de hecho una consecuencia del mismo.
 
 Sin embargo, aunque se hacen continuas referencias a la naturaleza con objetos como un romanescu o un rayo, como en las imágenes \ref{fig:objetos} , o se hayan descrito SFIs para modelar un árbol o un helecho en las tablas \ref{tabla:arbol-pitagoras} y \ref{tabla:helecho-Barnsley}, cuyos resultados se pueden ver en las imágenes \ref{fig:atractores-sfi}; lo cierto es que no hay ningún énfasis en aplicaciones de la geometría fractal en la naturaleza. Podemos encontrar en el capítulo \ref{chap:SFI} algunas aplicaciones de la geometría fractal y del teorema del collage, pero realmente no existen explicaciones minuciosas. Esto se debe a que estos cuatro capítulos desarrollados se han considerado suficientes para completar los créditos y los objetivos fundamentales de un proyecto de estas características. No obstante, si el lector lo desea puede encontrar en \cite{alma991007242979704990} una gran cantidad de relaciones entre la naturaleza y la geometría fractal.
 
