--- a/memoria/tex/capitulos/planificacion-presupuestos.tex
+++ b/memoria/tex/capitulos/planificacion-presupuestos.tex
@@ -2,11 +2,11 @@
 % ─── PLANIFICACION Y PRESUPUESTO ────────────────────────────────────────────────
 %
 
-Hasta el momento hemos introducido la materia matemática básica de esta disciplina. Con el objetivo de familiarizar al usuario de internet con los conjuntos de Julia y Mandelbrot en dos dimensiones, estudiados en el capítulo \ref{chap:Julia-Mandelbrot}, y con el de conseguir nuestras primeras visualizaciones de fractales tridimensionales es momento de comenzar el desarrollo del producto software. Como se ha dicho en la introducción y en otras partes del proyecto, este producto consiste en una web interactiva en la que poder graficar distintos fractales, tanto 2D como 3D, permitiendo modificar algunos de sus parámetros de manera dinámica.  
+Hasta el momento hemos introducido la materia matemática básica de esta disciplina. Con el objetivo de familiarizar al usuario de internet con los conjuntos de Julia y Mandelbrot en dos dimensiones, estudiados en el capítulo \ref{chap:Julia-Mandelbrot}, y con el de conseguir nuestras primeras visualizaciones de fractales tridimensionales es momento de comenzar el desarrollo del producto software. Como se ha dicho en la introducción y en otras partes de esta memoria, este producto consiste en una web interactiva en la que poder graficar distintos fractales, tanto 2D como 3D, permitiendo modificar algunos de sus parámetros de manera dinámica.  
 
 \section*{Planificación}
 
-A continuación describiremos la planificación temporal por fases de este proyecto software. Debe tenerse en cuenta que con cada avance hay asociado un tiempo de codificación de la funcionalidad, pero también un tiempo buscando información, consultando bibliografía y redactando la documentación del software.
+A continuación describiremos la planificación temporal por fases de este producto software. Debe tenerse en cuenta que con cada avance hay asociado un tiempo de codificación de la funcionalidad, pero también un tiempo buscando información, consultando bibliografía y redactando la documentación del software.
 
 \subsection*{Infraestructura básica}
 
@@ -14,7 +14,7 @@ La fase de desarrollo comienza a principios de Febrero de 2022, digamos el día 
 
 Esta tarea es sencilla, ya que hay muchos tutoriales, es el `hello world' de las aplicaciones gráficas. Debe estar lista antes del día \textbf{11 de Febrero de 2022}.
 
-Con esto, ya tenemos la infraestructura básica del proyecto software.
+Con esto, ya tenemos la infraestructura básica del producto software.
 
 \subsection*{Visualización de fractales 2D}
 
@@ -22,7 +22,7 @@ Con el código hasta ahora, debemos modificar la estructura para que el software
 
 Seguidamente, debemos preparar el documento web para el soporte de interactividad y gestión de eventos. Es decir, añadir formularios, botones, deslizadores... en principio sin funcionalidad alguna. Hecho esto, añadimos definitivamente la interactividad, permitiendo que a partir del documento web se pueda interactuar con el canvas y la escena que se está visualizando. Con cada avance en el desarrollo debe cuidarse la apariencia y el estilo de la web.
 
-En este punto, el proyecto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto que servirá de base para el resto de fases, estipulamos que debemos dar como margen hasta el \textbf{25 de Marzo de 2022}.
+En este punto, el producto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto que servirá de base para el resto de fases, estipulamos que debemos dar como margen hasta el \textbf{25 de Marzo de 2022}.
 
 \subsection*{Construcción de un programa ray-tracer}
 
@@ -36,7 +36,7 @@ Este programa requiere programar el propio ray-tracing, formas de calcular las i
 
 \subsection*{Visualización de fractales en 3D}
 
-Esta aunque no es la última fase del proyecto, probablemente sí sea la más importante y la más compleja. Debemos modificar el programa ray-tracer del apartado anterior con el objetivo de visualizar en la escena imágenes de fractales 3D.
+Esta aunque no es la última fase del desarrollo del producto, probablemente sí sea la más importante y la más compleja. Debemos modificar el programa ray-tracer del apartado anterior con el objetivo de visualizar en la escena imágenes de fractales 3D.
 
 Esta fase requiere, además de código, mucho tiempo de búsqueda y consulta bibliográfica. Una vez adquiridos conocimientos necesarios haremos las modificaciones oportunas a las regiones de código necesarias al programa que tenemos hasta ahora con el objetivo de visualizar los fractales en 3D.
 Al igual que en todas las fases, debemos ir añadiendo parámetros modificables a la web y cuidar el estilo.
@@ -51,13 +51,13 @@ El problema es que estas dos adiciones son muy costosas en tiempo, lo cual compr
 
 Seguidamente podemos añadir esferas englobantes al programa como técnica de optimización, al menos en escenas donde el fractal esté relativamente lejano.
 
-Estas modificaciones completarían el desarrollo software de la visualización e interacción de la escena y en lo que a `backend' se refiere completa el proyecto. Debe estar lista el \textbf{1 de Junio de 2022}.
+Estas modificaciones completarían el desarrollo software de la visualización e interacción de la escena y en lo que a `backend' se refiere completa el software. Debe estar lista el \textbf{1 de Junio de 2022}.
 
 \subsection*{Añadir estilo y UX a la web}
 
 Desde el inicio, al estar en fases de desarrollo, hemos descuidado bastante la apariencia de la página en lo que a secciones, fuentes y colores se refiere. Por tanto, añadiremos estilo y código CSS al documento para darle una apariencia más visual y amigable.
 
-La última, pero no por ello menos importante fase del proyecto debe estar finalizada el día de la entrega, que es el \textbf{20 de Junio de 2022}.
+La última, pero no por ello menos importante fase del desarrollo debe estar finalizada el día de la entrega, que es el \textbf{20 de Junio de 2022}.
 
 \vspace{0.5cm}
 
@@ -66,18 +66,18 @@ En conclusión, y a modo de resumen, presentamos en la imagen \ref{fig:Gantt} el
 \begin{figure} [ht]
     \centering
     \includegraphics[scale = 0.44]{img/Gantt.png}
-    \caption{Diagrama de Gantt de la planificación del proyecto}
+    \caption{Diagrama de Gantt de la planificación del desarrollo del producto software}
     \label{fig:Gantt}
 \end{figure}
 
 
-\section*{Presupuesto del proyecto}
+\section*{Presupuesto del producto software}
 
-A continuación haremos una estimación del presupuesto de este proyecto. Para ello desglosaremos los distintos recursos utilizados en: recursos hardware, recursos software y recursos humanos. Estimaremos el coste de cada uno de ellos y presentaremos un presupuesto final.
+A continuación haremos una estimación del presupuesto de este producto. Para ello desglosaremos los distintos recursos utilizados en: recursos hardware, recursos software y recursos humanos. Estimaremos el coste de cada uno de ellos y presentaremos un presupuesto final.
 
 \subsection*{Recursos hardware}
 
-Todo el proyecto ha sido desarrollado en un ordenador portátil personal. Las especificaciones hardware de dicho ordenador se pueden comprobar en la tabla \ref{tabla:especificaciones-PC}.
+Todo el software ha sido desarrollado en un ordenador portátil personal. Las especificaciones hardware de dicho ordenador se pueden comprobar en la tabla \ref{tabla:especificaciones-PC}.
 \begin{table}[ht]
     \centering
     \begin{tabular}{ll}
@@ -103,7 +103,9 @@ A continuación enumeraremos los recursos software utilizados en la codificació
 \begin{itemize}
     \item \textbf{Visual Studio Code}: Editor de código utilizado tanto para redactar todo el código fuente necesario como la memoria, gracias a sus múltiples extensiones que lo convierten en un entorno de desarrollo muy versátil.
     \item \textbf{Google Chrome}: Navegador web, ampliamente utilizado para visualizar la web que se ha desarrollado en cada una de sus fases. también se ha empleado para consultar bibliografía, buscar información o realizar muchas de las imágenes utilizadas. En este último aspecto, los sitios más visitados han sido \href{https://www.vectary.com/}{\textcolor{blue}{Vectary}} y  \href{https://www.figma.com/}{\textcolor{blue}{Figma}}.
-    \item \textbf{Git y Github}: Sistema de control de versiones, gracias a git se ha permitido llevar un histórico de los avances que se han hecho en el proyecto. Además, con `github' pages se ha podido desplegar la web en internet gratuitamente.
+    \item \textbf{Git y Github}: Sistema de control de versiones, gracias a git se ha permitido llevar un histórico de los avances que se han hecho en el trabajo. Además, con `github' pages se ha podido desplegar la web en internet gratuitamente.
+    \item \textbf{Bootstrap}: Framework de CSS y JavaScript útil para la programación del estilo de la página web.
+    \item \textbf{jQuery}: Biblioteca de JavaScript que simplifica la sintaxis y la programación del lenguaje.
 \end{itemize}
 
 Todo esto junto con las típicas aplicaciones como el navegador de archivos, la terminal, etc.
@@ -112,7 +114,7 @@ Afortunadamente, todos los recursos software son gratuitos, por lo que el presup
 
 \subsection*{Recursos humanos}
 
-Sobre recursos humanos, el proyecto ha sido en su totalidad desarrollado por el alumno y autor de este texto: Juan Antonio Villegas Recio. Siempre bajo la supervisión y ayuda del tutor de informática: D. Carlos Ureña Almagro.
+Sobre recursos humanos, el producto ha sido en su totalidad desarrollado por el alumno y autor de este texto: Juan Antonio Villegas Recio. Siempre bajo la supervisión y ayuda del tutor de informática: D. Carlos Ureña Almagro.
 
 Si hacemos una estimación de unas 20 horas semanales de media, teniendo en cuenta que el desarrollo ha durado 20 semanas, lo cual supone un total de 400 horas, a régimen de 15€ por cada hora de trabajo, en total el gasto en recursos humanos supone \textbf{6.000€}.
 
@@ -134,4 +136,4 @@ Presentamos entonces el desglose final del presupuesto de este proyecto en la ta
     \label{tab:presupuestos}
 \end{table}
 
-Por tanto, el presupuesto de este proyecto es de \textbf{6070€}.
+Por tanto, el presupuesto de este producto software es de \textbf{6070€}.
