--- a/memoria/tex/conclusiones.tex
+++ b/memoria/tex/conclusiones.tex
@@ -2,7 +2,7 @@
 % ─── CONCLUSIONES ───────────────────────────────────────────────────────────────
 %
 
-Para finalizar la redacción de esta memoria, pondremos en valor algunas conclusiones extraídas durante el desarrollo de este trabajo. En primer lugar, nos gustaría resaltar que, salvo las bases, todo este proyecto ha sido sobre una materia totalmente nueva. No existe ninguna materia en el grado ni de informática ni de matemáticas que explique geometría fractal, a pesar de ser una disciplina no sólo muy hermosa visualmente, sino muy relacionada tanto con una como con otra.
+Para finalizar la redacción de esta memoria, pondremos en valor algunas conclusiones extraídas durante el desarrollo de este trabajo. En primer lugar, nos gustaría resaltar que, salvo las bases, todo este trabajo ha sido sobre una materia totalmente nueva. No existe ninguna materia en el grado ni de informática ni de matemáticas que explique geometría fractal, a pesar de ser una disciplina no sólo muy hermosa visualmente, sino muy relacionada tanto con una como con otra.
 
 De hecho, llama la atención la cantidad de distintas áreas de la ciencia y de las matemáticas que confluyen en la geometría fractal, al menos en este TFG. Ya en la introducción vimos la cantidad de distintos ámbitos que se recomendaba conocer: análisis, variable compleja, matemática aplicada, geometría euclídea... O por ejemplo, el artículo \cite{Hubbard-Douady} del cual se extrae el `potencial de Hubbard-Douady', que realmente es un concepto puramente matemático aparentemente poco relacionado con esta disciplina, pero finalmente sirve para extraer una SDF con la que visualizar imágenes fractales en 3D.
 
@@ -12,5 +12,5 @@ La geometría fractal es también muy utilizada en los efectos especiales de pel
 
 Si miramos al futuro, con las nuevas tecnologías y unidades de procesado cada vez más rápidas y eficientes esta ciencia llegará lejos y podremos hacer uso de ella con niveles de realismo y resoluciones cada vez mayores, a la par que contribuir a industrias como las del cine o los videojuegos entre otras. Esta es una materia en expansión y que vemos que puede ser muy rica en aportes a otras disciplinas, por lo que incitamos a quien lo desee que entre a descubir la magia de estas extrañas figuras para poder no solo disfrutar de una experiencia placentera, sino quien sabe si poder aportar el día de mañana su granito de arena.
 
-Muchas gracias al lector por su atención, deseo de todo corazón que haya disfrutado leyendo este proyecto como yo haciéndolo, siempre pensando en usted y en todo el que desee conocer la geometría fractal. 
+Muchas gracias al lector por su atención, deseo de todo corazón que haya disfrutado leyendo esta memoria como yo haciéndolo, siempre pensando en usted y en todo el que desee conocer la geometría fractal. 
 
