--- a/memoria/tex/resumen.tex
+++ b/memoria/tex/resumen.tex
@@ -1,5 +1,5 @@
 
-Es muy probable que a lo largo de su vida haya visto en internet, revistas o periódicos alguna imagen con patrones que se repiten hasta donde el ojo humano alcanza a ver, y con total seguridad ha tratado con estructuras tan naturales como un árbol, la hoja de un helecho y algunos tipos de verduras como la coliflor en las que la parte y el todo parecen tener una forma muy similar. Los fractales, desde un punto de vista matemático son figuras o imágenes que obedecen a patrones de repeticón y similaridad, y son los protagonistas de este proyecto.
+Es muy probable que a lo largo de su vida haya visto en internet, revistas o periódicos alguna imagen con patrones que se repiten hasta donde el ojo humano alcanza a ver, y con total seguridad ha tratado con estructuras tan naturales como un árbol, la hoja de un helecho y algunos tipos de verduras como la coliflor en las que la parte y el todo parecen tener una forma muy similar. Los fractales, desde un punto de vista matemático son figuras o imágenes que obedecen a patrones de repeticón y similaridad, y son los protagonistas de este TFG.
 
 No existe una clara definición de lo que es un fractal, pero muchas de las existentes y en especial la introducida por \textit{Benoit Mandelbrot}, el considerado padre de la geometría fractal, tienen en común dos rasgos: la autosimilaridad y la dimensión. La autosimilaridad es una propiedad que tiene un conjunto que está compuesto por pequeñas copias de sí mismo. Por ejemplo, las ramas de un árbol a su vez tienen forma de árboles más pequeños que el original. Sobre la dimensión, es más difícil abordarla de forma intuitiva, pero podemos afirmar que los fractales al tener formas muy complejas, aunque se puedan representar en dos o tres dimensiones realmente su dimensión puede incluso no ser un número entero, al contrario de lo que dictamina la intuición. Ayudados de ejemplos clásicos y como introducción a esta materia, ahondaremos en los distintos conceptos de autosimilaridad y dimensión fractal.
 
