Cambio cálculo por análisis (#68)

--- a/memoria/tex/resumen.tex
+++ b/memoria/tex/resumen.tex
@@ -7,7 +7,7 @@ Una herramienta muy utilizada también en el mundo de los fractales es la iterac
 
 Se explicarán las bases y la teoría matemática asociada a todos estos ámbitos de la geometría fractal, todo ello acompañado de imágenes y ejemplos aclarativos.
 
-Por otro lado, la geometría fractal es una disciplina muy visual. Las figuras, las imágenes y los gráficos son esenciales para entender la teoría y además son en parte el objetivo de este ámbito: visualizar imágenes fractales a partir de algoritmos de cálculo numérico. Por esto, se ha aprovechado la existencia de herramientas gráficas de visualización por ordenador que nos proporciona la informática gráfica para, en conjunción con los conocimientos que nos aportan las matemáticas, visualizar de manera interactiva algunos de los fractales 2D que se presentan. 
+Por otro lado, la geometría fractal es una disciplina muy visual. Las figuras, las imágenes y los gráficos son esenciales para entender la teoría y además son en parte el objetivo de este ámbito: visualizar imágenes fractales a partir de algoritmos del análisis numérico. Por esto, se ha aprovechado la existencia de herramientas gráficas de visualización por ordenador que nos proporciona la informática gráfica para, en conjunción con los conocimientos que nos aportan las matemáticas, visualizar de manera interactiva algunos de los fractales 2D que se presentan. 
 
 Si damos un salto a las tres dimensiones, la situación es mucho más compleja, ya que es fácil identificar una imagen con un fragmento del plano, pero representar el espacio 3D en una imagen 2D es más difícil. Para ello hemos aplicado una herramienta tan conocida como costosa: El Ray-Tracing. Gracias a ella podremos visualizar tanto escenas sencillas con un aceptable grado de realismo como escenas con fractales tridimensionales originados por la generalización a 3D de los conjuntos de Julia y de Mandelbrot.
 
