--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -7,13 +7,13 @@ Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbr
 
 Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
 
-Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing'. Gracias a ella, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, gracias a trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
+Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing'. Gracias a ella, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, con trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
 
 A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
 
 Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen un alto prestigio entre las revistas dedicadas al mundo de la investigación. Por ejemplo, en el ámbito meramente fractal, la revista \href{https://www.worldscientific.com/worldscinet/fractals}{\textcolor{blue}{\textit{Fractals}}}. Por su parte, en el ámbito de problemas inversos encontramos la revista \href{https://iopscience.iop.org/journal/0266-5611}{\textcolor{blue}{\textit{Inverse Problems}}}.
 
-La geometría fractal tiene también aplicación vigente en la teoría de identificación de parámetros, ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. Con respecto a desarrollo de herramientas, podemos encontrar en la revista `Fractals' el artículo de 2019 \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}.
+La geometría fractal y el teorema del collage también han inspirado el desarrollo de herramientas de trabajo en otras áreas de las matemáticas. Ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. En la revista `Fractals' podemos también encontrar un artículo de 2019 llamado \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}, que relaciona geometría fractal y ecuaciones diferenciales.
 
 Por su parte, la revolución informática afecta en particular a las tarjetas gráficas.  En 2020 NVIDIA lanzó al mercado la serie `GeForce RTX 30'. Por ejemplo, la NVIDIA GeForce RTX 3050, que es de los últimos modelos, ofrece núcleos de Ray Tracing dedicados y emplea tecnologías de inteligencia artificial.
 
@@ -39,7 +39,7 @@ Recomendamos que el lector cuente con ciertos conocimientos básicos en algunas 
     \item Análisis matemático básico: En la mayoría de los desarrollos matemáticos más elaborados se parte del concepto de `espacio métrico', haciendo uso exhaustivo de la distancia. También se emplea mucho el concepto de sucesión y convergencia (o divergencia) de sucesiones. Es igualmente necesario conocer los conceptos de continuidad de aplicaciones.
     \item Teoría de la medida: Aunque no se entre en detalle en estos aspectos, viene bien tener claro la medida usual de Lebesgue en $\R^n$ y las bases de teoría de la medida en general.
     \item Variable compleja: Es prácticamente indispensable que el lector maneje bien los números complejos, propiedades del módulo y potencias enteras de números complejos. Esto, junto con alguna pincelada sobre funciones complejas sería suficiente para abordar el texto desde este punto de vista.
-    \item Geometría afín euclídea: Muy basada en el álgebra lineal, se utilizan conceptos como transformaciones afines, tanto en 2D como en 3D, sistemas de referencia, movimientos rígidos, vectores, etc.
+    \item Geometría afín euclídea: Se utilizan conceptos como transformaciones afines, tanto en 2D como en 3D, sistemas de referencia, movimientos rígidos, vectores, etc.
     \item Matemática aplicada: Utilizamos la iteración y el ordenador para programar los algoritmos de visualización de fractales, aplicando al mundo computacional los procedimientos explicados teóricamente para obtener algo tan tangible como son las imágenes.
     \item Topología: Aunque en realidad en ningún momento se utiliza una topología distinta de la usual en $\R^n$, es conveniente controlar conceptos como el de conjunto abierto, conjunto cerrado, entorno, compacidad o conexión.
 \end{itemize}
