--- a/memoria/tex/objetivos.tex
+++ b/memoria/tex/objetivos.tex
@@ -2,7 +2,7 @@ Los objetivos iniciales de este trabajo son muy similares a los finalmente alcan
 
 En el ámbito de las matemáticas, el objetivo inicial consistía en realizar un estudio de los fundamentos básicos de la Geometría Fractal. Para ello, se realizaría una recopilación de algunos de los conceptos y resultados necesarios, insistiendo en la teoría de la medida y el teorema del punto fijo de Banach. Se desarrollarían los elementos esenciales de la Geometría Fractal, especialmente conceptos de dimensión, como la de Hausdorff, sistemas de funciones iteradas, autosimilitud o el teorema del collage. Finalmente, se presentarían diversas aplicaciones de la Geometría Fractal, especialmente vinculadas con la naturaleza.
 
-En efecto, se han recopilado los resultados más importantes de la geometría fractal. La autosimilitud o autosimilaridad se expone en la definición \ref{def:autosimilaridad} y para clarificarla se exponen numerosos ejemplos de fractales clásicos. Además, se referencia continuamente a esta definición al ser, junto con la dimensión, una de las características fundamentales que componen la definición de \textit{fractal} según \textit{Benoit Mandelbrot} (definición \ref{def:fractal}).
+En efecto, se han recopilado los resultados más importantes de la geometría fractal. La autosimilitud o autosimilaridad se expone en la definición \ref{def:autosimilaridad} y para clarificarla se exponen numerosos ejemplos de fractales clásicos. Además, se referencia continuamente a este término al ser, junto con la dimensión, una de las características fundamentales que componen la definición de \textit{fractal} según \textit{Benoit Mandelbrot} (definición \ref{def:fractal}).
 
 Sobre teoría de la medida, en el capítulo \ref{chap:concepto} se comprueba la nulidad de la medida de Lebesgue de algunos objetos fractales como el conjunto de Cantor en la sección \ref{subsection:Cantor} o el triángulo de Sierpinski en la \ref{subsection:triangulo-Sierpinski}. Se presenta la medida de Hausdorff en la sección \ref{subsection:dim-Hausdorff}, la cual nos lleva directamente al concepto de dimensión de Hausdorff. Sobre dimensión, además de una introducción básica, se definen conceptos como la dimensión por cajas en el apartado \ref{subsection:dim-cajas}, la ya mencionada dimensión de Hausdorff en el \ref{subsection:dim-Hausdorff} y la dimensión topológica en el \ref{subsection:dim-topologica}, para finalmente relacionar entre sí todas las definiciones en la sección \ref{subsection:relacion-dimensiones}. 
 
