Cambio el titulo del TFG XD (#68)

--- a/memoria/tex/titlepage.tex
+++ b/memoria/tex/titlepage.tex
@@ -16,10 +16,10 @@
 
 	%Thesis title
 	\vspace{1cm}
-	{\LARGE\noindent \textbf{Fractales y Geometría Fractal} \par}
+	{\LARGE\noindent \textbf{Fractales} \par}
 	\vspace{0.5cm}
 	%Thesis subtitle
-	{\Large\noindent Fractales, geometría fractal y aplicaciones en la ciencia. Visualización de fractales con Ray-Tracing \par}
+	{\Large\noindent Fundamentos matemáticos y visualización tridimensional con\linebreak Ray-Tracing \par}
 	\vspace{2cm}
 	%Author's name
 	{\LARGE\noindent Autor: Juan Antonio Villegas Recio \par} 
