Corregido romanescu y cuadrícula (#68)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -15,7 +15,7 @@ Las primeras preguntas que se pueden plantear son ¿qué es un fractal? ¿Qué t
 \label{fig:objetos}
 \end{figure}
 
-Observemos que el romanescu, que es un tipo de coliflor, pareciera que está formado de pequeños trozos que recuerdan el objeto original, mientras que estos pequeños trozos a su vez también están formados de pequeños trozos similares al objeto inicial, y así sucesivamente. Por su parte, el rayo se compone de un destello principal del que salen ramificaciones de las que a su vez se originan otras divisiones, formando pequeños rayos semejantes al rayo primitivo.
+Observemos que el romanescu, que es un tipo de coliflor, pareciera que está formado de pequeños fragmentos que recuerdan el objeto original, mientras que estos a su vez también están formados de pequeños trozos similares al objeto inicial, y así sucesivamente. Por su parte, el rayo se compone de un destello principal del que salen ramificaciones de las que a su vez se originan otras divisiones, formando pequeños rayos semejantes al rayo primitivo.
 
 Esta idea de objetos prácticamente iguales al original salvo cambios de escala es la subyacente al concepto de autosimilaridad.
 
@@ -252,11 +252,11 @@ En caso de coincidir, se denomina \textit{dimensión por cajas} de $A$ al valor
 
 También es conocida en literatura como \textit{dimensión por conteo de cajas} o \textit{dimensión de Minkowski-Bouligand}.
 
-Hay varias definiciones equivalentes, generalmente más sencillas de utilizar. Por ejemplo, si tomamos en $\R^n$ una cuadrícula de lado $\delta$, \textit{i.e.}, con conjuntos de la forma
+Hay varias definiciones equivalentes, generalmente más sencillas de utilizar. Por ejemplo, si dividimos $\R^n$ con conjuntos de la forma
 $$
 [m_1 \delta, (m_1+1)\delta]\times\cdots\times[m_n \delta, (m_n+1)\delta]
 $$
-donde $m_1,\dots,m_n$ son enteros, tendríamos $\R^n$ dividido en rectángulos de $\R^n$, comúnmente conocidos como `cajas', de diámetro $\delta\sqrt{n}$ y contando el número de cajas que recubren a $A$, obtenemos el mismo resultado, puede comprobarse en \cite[sección 3.1]{alma991007022459704990}.
+donde $m_1,\dots,m_n$ son enteros, tendríamos $\R^n$ dividido en cuadrados de $\R^n$ de lado $\delta$, comúnmente conocidos como `cajas', de diámetro $\delta\sqrt{n}$ y contando el número de cajas que recubren a $A$, obtenemos el mismo resultado, puede comprobarse en \cite[sección 3.1]{alma991007022459704990}.
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
