Cambiada palabra 'algorithm' por 'algoritmo' (#68)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -54,6 +54,7 @@
 \renewcommand{\Im}[0]{\mathrm{Im}\ }
 \renewcommand{\H}[0]{\mathbb{H}}
 \renewcommand{\baselinestretch}{1.2}
+\renewcommand{\ALG@name}{Algoritmo}
 
 %MORE PACKAGES HERE
 \newcommand{\R}[0]{\mathbb{R}}
